# UFOP

./: .gitignore  README.md
BCC201 - Introducao a Programacao/laboratorio/ap15/: q03.c
BCC201 - Introducao a Programacao/laboratorio/ap16/: q02  q02.c
BCC201 - Introducao a Programacao/tp/: main.c
BCC201 - Introdução a Programação/aulas/: arquivos.txt
BCC201 - Introdução a Programação/laboratorio/ap15/: q01  q01.c  q02.c  q03
BCC201 - Introdução a Programação/laboratorio/ap16/: q01  q01.c
BCC201/laboratorio/ap15/: q02
BCC201/tp/: main.c  utils.c  utils.h
BCC202 - Estrutura de Dados 1/aulas/alocacao/: ex01  ex01.c
BCC202 - Estrutura de Dados 1/lab/lab01/: aluno.c  pratica.c
BCC202 - Estrutura de Dados 1/tp1/: formula.c
BCC202 - Estrutura de Dados I/tp1/: clausula.h  exe
BCC202 - Estrutura de Dados I/tp2/: LICENSE  fila.c  fila.h  tp.c
BCC202 - Estrutura de Dados I/tp3/: Makefile  exe  filaprocessos.c  filaprocessos.h  tp.c
BCC202/tp1/: clausula.c  clausula.h  formula.c  formula.h  tp.c
BCC222/: Estruturas de Dados Básicas.txt
BCC222 - Programacao Funcional/: Pratica-Condicional.hs  Pratica-TiposEDados.hs
BCC222 - Programacao Funcional/Atv02 - Vendas/: README.md  config.cabal
BCC222 - Programacao Funcional/Atv04 - Calculo de Pi/: README.md
BCC222 - Programacao Funcional/Atv05 - Caca Niqueis/: caca-niqueis.cabal
BCC222 - Programacao Funcional/Atv11 - Urna Eletronica/: README.md
BCC222 - Programacao Funcional/Atv13 - Processador de Logs/: log-processor.cabal
BCC222 - Programacao Funcional/Atv13 - Processador de Logs/src/: LogProcessor.hs
BCC222 - Programacao Funcional/Atv14 - Hanoi Solver/: hanoi-solver.cabal
BCC222 - Programacao Funcional/Atv14 - Hanoi Solver/src/: Hanoi.hs
BCC222 - Programacao Funcional/Atv15 - RPN Calculator/: rpn-calculator.cabal
BCC222 - Programacao Funcional/Atv15 - RPN Calculator/app/: Main.hs
BCC222 - Programacao Funcional/Atv15 - RPN Calculator/test/: MainSpec.hs
BCC222 - Programacao Funcional/Atv17 - Expressão Lambda/: .hlint.yaml  exercicios-lambda.cabal
BCC222 - Programacao Funcional/Atv17 - Expressão Lambda/test/: MainSpec.hs
BCC222 - Programacao Funcional/Atv19 - Avaliacao de Alunos/: README.md
BCC222 - Programacao Funcional/Atv20 - Popularidade de Nomes/: README.md  popularidade-nomes.cabal
BCC222 - Programacao Funcional/Atv20 - Popularidade de Nomes/app/: Main.hs
BCC222 - Programacao Funcional/Atv20 - Popularidade de Nomes/test/: MainSpec.hs
BCC222 - Programacao Funcional/Atv21 - Modelando Figuras Geometricas/: README.md  figuras-geometricas.cabal
BCC222 - Programacao Funcional/Atv21 - Modelando Figuras Geometricas/app/: Main.hs
BCC222 - Programacao Funcional/Atv21 - Modelando Figuras Geometricas/src/: Figuras.hs
BCC222 - Programacao Funcional/Atv23 - Processamento Seguro de Dados/: processamento-seguro-dados.cabal
BCC222 - Programação Funcional/: Expressões e Definições.txt  Tipos de Dados.txt
BCC222 - Programação Funcional/Atv03 - Gorjetas/: README.md  cabal.project  gorjetas.cabal
BCC222 - Programação Funcional/Atv03 - Gorjetas/src/: Gorjeta.hs
BCC222 - Programação Funcional/Atv03 - Gorjetas/test/: MainSpec.hs
BCC222 - Programação Funcional/Atv05 - Caca Niqueis/: README.md
BCC222 - Programação Funcional/Atv06 - Crescimento Populacional/: LICENSE
BCC222 - Programação Funcional/Atv07 - Collatz Conjecture/: collatz-conjecture.cabal
BCC222 - Programação Funcional/Atv07 - Collatz Conjecture/test/: MainSpec.hs
BCC222 - Programação Funcional/Atv08 - Media Sequencial/: README.md
BCC222 - Programação Funcional/Atv10 - Chocolates/: .gitignore
BCC222 - Programação Funcional/Atv11 - Urna Eletronica/: urna-eletronica.cabal
BCC222 - Programação Funcional/Atv11 - Urna Eletronica/test/: MainSpec.hs
BCC222 - Programação Funcional/Atv14 - Hanoi Solver/: ilust.tex
BCC222 - Programação Funcional/Atv15 - RPN Calculator/: README.md
BCC222 - Programação Funcional/Atv16 - RLE Compressor/: README.md  rle-compressor.cabal
BCC222 - Programação Funcional/Atv16 - RLE Compressor/app/: Main.hs
BCC222 - Programação Funcional/Atv17 - Expressão Lambda/: README.md
BCC222 - Programação Funcional/Atv19 - Avaliacao de Alunos/: avaliacao-alunos.cabal
BCC222 - Programação Funcional/Atv19 - Avaliacao de Alunos/src/: ProcessaNotas.hs
BCC222 - Programação Funcional/Atv19 - Avaliacao de Alunos/test/: MainSpec.hs
BCC222 - Programação Funcional/Atv22 - Arvores Binarias/: README.md  arvores-binarias.cabal
BCC222 - Programação Funcional/Atv22 - Arvores Binarias/test/: MainSpec.hs
BCC222 - Programação Funcional/Atv24 - Processamento Seguro de Dados/: README.md
BCC222 - Programação Funcional/lab/Atv06 - Crescimento Populacional/: README.md  crescimento-populacional.cabal
BCC222 - Programação Funcional/lab/Atv06 - Crescimento Populacional/app/: Main.hs
BCC222 - Programação Funcional/lab/Atv06 - Crescimento Populacional/test/: Run.hs
BCC222 - Programação Funcional/lab/Atv09 - Overbooking/: README.md  overbooking.cabal
BCC222 - Programação Funcional/lab/Atv09 - Overbooking/src/: Overbooking.hs
BCC222 - Programação Funcional/lab/Atv10 - Chocolates/: README.md  chocolates.cabal
BCC222 - Programação Funcional/lab/Atv10 - Chocolates/src/: Chocolates.hs
BCC222 - Programação Funcional/lab/Atv10 - Chocolates/test/: MainSpec.hs
BCC222 - Programação Funcional/lab/Atv12 - Luhn Validator/: README.md  luhn-validator.cabal
BCC222 - Programação Funcional/lab/Atv12 - Luhn Validator/app/: Main.hs
BCC222 - Programação Funcional/lab/Atv12 - Luhn Validator/src/: Luhn.hs
BCC222/lab/: Pratica-Estruturas.hs  Pratica-Polimorfismo.hs
BCC266 - Organizacao de Computadores/tp2/: bloco.c  cache.h  instrucao.c  instrucao.h  instrucoes.txt  main.c  mmu.c  mmu.h
BCC266 - Organizacao de Computadores/tp3/: bloco.h  exe  hd.c  hd.h  instrucao.c  instrucoes.txt  main.c  maquina.c  maquina.h  mmu.c  mmu.h  ram.c  ram.h  tratador.txt
BCC266 - Organização de Computadores/tp1/: cpu.c  programas.h
BCC266 - Organização de Computadores/tp2/: cache.c  exe  maquina.c  maquina.h  ram.c  ram.h
(+177 files in other folders)
