cabal-version:      3.0
name:               vendas
version:            1.0.0

library
    default-language: Haskell2010
    hs-source-dirs:   src
    exposed-modules:  Vendas
    build-depends:    base

executable vendas
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          Main.hs
    other-modules:    Vendas
    build-depends:    base
                    , vendas

test-suite tests
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MainSpec.hs
    other-modules:    Run
    build-depends:    base
                    , hspec
                    , QuickCheck
                    , ieee754
                    , process
                    , temporary
                    , vendas
