cabal-version:      3.0
name:               rpn-calculator
version:            0.1.0.0
synopsis:           Calculadora RPN Segura
description:        Atividade prática sobre Expressão Case e manipulação de listas.
license:            MIT
author:             Prof. José Romildo Malaquias
maintainer:         malaquias@gmail.com
category:           Education
build-type:         Simple
extra-source-files: README.md

common common-deps
    build-depends:    base >= 4.7 && < 5
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat

library
    import:           common-deps
    exposed-modules:  RPN
    hs-source-dirs:   src
    build-depends:    base

executable rpn-calculator
    import:           common-deps
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    rpn-calculator

test-suite tests
    import:           common-deps
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MainSpec.hs
    build-depends:    rpn-calculator
                    , hspec
                    , QuickCheck
