cabal-version:      3.0
name:               exercicios-lambda
version:            0.1.0.0
synopsis:           Exercícios práticos sobre expressões lambda e aplicação parcial.
description:        Uma atividade prática em Haskell para praticar a refatoração
                    de funções para usar lambdas, criar funções com aplicação
                    parcial e seções, e processar dados.
license:            MIT
license-file:       LICENSE
author:             Prof. José Romildo Malaquias
maintainer:         malaquias@ufop.edu.br
category:           Learning
build-type:         Simple
extra-source-files: README.md

common common-deps
    build-depends:    base >= 4.7 && < 5
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat

library
    import:           common-deps
    exposed-modules:  Exercicios
    hs-source-dirs:   src

executable exercicios-lambda
    import:           common-deps
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    exercicios-lambda

test-suite tests
    import:           common-deps
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MainSpec.hs
    build-depends:    exercicios-lambda
                    , hspec
                    , QuickCheck
                    , hlint >= 3.0