cabal-version:      3.0
name:               collatz-conjecture
version:            0.1.0.0
synopsis:           Análise da Sequência de Collatz.
description:        Atividade prática para exercitar recursividade indefinida em Haskell,
                    calculando o comprimento e o pico da sequência de Collatz para um
                    dado número.
license:            MIT
license-file:       LICENSE
author:             Prof. José Romildo Malaquias
maintainer:         malaquias@ufop.edu.br
category:           Console Application, Learning
build-type:         Simple
extra-source-files: README.md

common common-deps
    build-depends:    base >= 4.7 && < 5
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat

library
    import:           common-deps
    exposed-modules:  Collatz
    hs-source-dirs:   src

executable collatz
    import:           common-deps
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    collatz-conjecture

test-suite tests
    import:           common-deps
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MainSpec.hs
    other-modules:    Run
    build-depends:    collatz-conjecture
                    , hspec
                    , process
                    , temporary
