cabal-version:      3.0
name:               arvores-binarias
version:            0.1.0.0
synopsis:           Exercício prático com Tipos Algébricos Recursivos.
description:        Uma atividade para praticar a definição de um tipo de dado
                    algébrico, polimórfico e recursivo (BinTree) e a
                    implementação de funções com casamento de padrão sobre ele.
license:            MIT
license-file:       LICENSE
author:             Prof. José Romildo Malaquias
maintainer:         malaquias@ufop.edu.br
category:           Learning
build-type:         Simple
extra-source-files: README.md

common common-deps
    build-depends:    base >= 4.7 && < 5
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat

library
    import:           common-deps
    exposed-modules:  BinTree
    hs-source-dirs:   src

executable arvores-binarias
    import:           common-deps
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    arvores-binarias

test-suite tests
    import:           common-deps
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MainSpec.hs
    build-depends:    
        , arvores-binarias
        , hspec
