cabal-version:      3.0
name:               overbooking
version:            0.1.0.0
synopsis:           Sistema simples de gestão de overbooking de voos.
description:        Uma atividade prática em Haskell para implementar um programa
                    com um laço de E/S recursivo para processar dados de voos
                    e gerar um relatório de overbooking.
license:            MIT
license-file:       LICENSE
author:             Prof. José Romildo Malaquias
maintainer:         malaquias@ufop.edu.br
category:           Console Application, Learning
build-type:         Simple
extra-source-files: README.md

common common-deps
    build-depends:    base >= 4.7 && < 5
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat

library
    import:           common-deps
    exposed-modules:  Overbooking
    hs-source-dirs:   src

executable overbooking
    import:           common-deps
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    overbooking

test-suite tests
    import:           common-deps
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MainSpec.hs
    other-modules:    Run
    build-depends:    overbooking
                    , hspec
                    , process
                    , temporary
