cabal-version:      3.0
name:               chocolates
version:            0.1.0.0
synopsis:           Simulador de um laço de compras para uma promoção de chocolates.
description:        Uma atividade prática em Haskell para implementar um programa
                    interativo com um laço recursivo, lógica condicional e
                    formatação de saída.
license:            MIT
license-file:       LICENSE
author:             Prof. José Romildo Malaquias
maintainer:         malaquias@ufop.edu.br
category:           Console Application, Learning
build-type:         Simple
extra-source-files: README.md

common common-deps
    build-depends:    base >= 4.7 && < 5
                    , text
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat

library
    import:           common-deps
    exposed-modules:  Chocolates
    hs-source-dirs:   src

executable chocolates
    import:           common-deps
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    chocolates

test-suite tests
    import:           common-deps
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MainSpec.hs
    other-modules:    Run
    build-depends:    chocolates
                    , hspec
                    , ieee754
                    , process
                    , temporary
